<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question4Activity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:text="@string/what_is_the_color_of_soil"
            android:textSize="36sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:src="@drawable/soil"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/white"
            android:id="@+id/white_radiobutton"
            android:textSize="36sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:text="@string/brown"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/brown_radiobutton"
            android:textSize="36sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:text="@string/red"
            android:id="@+id/red_radiobutton"
            android:onClick="onRadioButtonClicked"
            android:textSize="36sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:text="@string/yellow"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/yellow_radiobutton"
            android:textSize="36sp" />

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:text="@string/Finish"
            android:textSize="36sp" />

    </LinearLayout>


</ScrollView>
