<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question3Activity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:text="@string/what_is_the_color_of_the_sky"
            android:textSize="36sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sky"
            android:layout_margin="36dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white"
            android:layout_margin="22dp"
            android:id="@+id/white_radiobutton"
            android:onClick="onRadioButtonClicked"
            android:textSize="36sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            android:id="@+id/yellow_radiobutton"
            android:layout_margin="22dp"
            android:onClick="onRadioButtonClicked"
            android:textSize="36sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:id="@+id/blue_radiobutton"
            android:onClick="onRadioButtonClicked"
            android:layout_margin="22dp"
            android:textSize="36sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:id="@+id/green_radiobutton"
            android:onClick="onRadioButtonClicked"
            android:textSize="36sp"
            android:layout_margin="22dp"/>
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:text="@string/next"
            android:textSize="36sp"
            android:id="@+id/btn_next3"/>
    </LinearLayout>


</ScrollView>
