<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:textColor="@android:color/black"
            android:text="@string/what_is_the_color_of_milk"
            android:textSize="36sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/milk"
            android:layout_margin="22dp"/>


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/white_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:layout_margin="22dp"
                android:textColor="@android:color/black"
                android:text="@string/white"
                android:textSize="36sp" />

            <RadioButton
                android:id="@+id/blue_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/blue"
                android:layout_margin="22dp"
                android:textColor="@android:color/black"
                android:textSize="36sp" />


            <RadioButton
                android:id="@+id/green_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/green"
                android:layout_margin="22dp"
                android:textColor="@android:color/black"
                android:textSize="36sp" />

            <RadioButton
                android:id="@+id/yellow_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:textColor="@android:color/black"
                android:text="@string/yellow"
                android:layout_margin="22dp"
                android:textSize="36sp" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:textSize="36sp"
            android:text="@string/next" />

    </LinearLayout>


</ScrollView>
