<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question2Activity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/question2"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="22sp"
        android:text="@string/what_is_the_color_of_this_sweet"
        android:textSize="36sp" />
<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/sweet"
    android:layout_margin="22sp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <RadioButton
        android:layout_width="wrap_content"
        android:id="@+id/white_radiobutton"
        android:layout_height="wrap_content"
        android:text="@string/white"
        android:onClick="onRadioButtonClicked"
        android:layout_margin="22dp"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brown"
        android:id="@+id/brown_radiobutton"
        android:layout_margin="22dp"
        android:onClick="onRadioButtonClicked"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:id="@+id/red_radiobutton"
        android:textSize="36sp"
        android:layout_margin="22dp"
        android:onClick="onRadioButtonClicked"
        android:textColor="@android:color/black"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow"
        android:id="@+id/yellow_radiobutton"
        android:layout_margin="22dp"
        android:textColor="@android:color/black"
        android:onClick="onRadioButtonClicked"
        android:textSize="36sp" />
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:text="Next"
            android:textSize="36sp"
            android:id="@+id/btn_next2"/>
    </LinearLayout>


</ScrollView>
